# VPNProxy

./: .coverage  .gitignore  MANUAL_TEST_GUIDE.md  README.md  client.py  server.py  start_vpn_proxy.cmd
.github/workflows/: ci-release.yml
certs/: server.crt
logs/: client-system-test.err
scripts/: bench_local.py  bench_mini.py  bench_quick.py  bench_rust_vs_python.py  benchmark.py  create_chrome_vpn_shortcut.ps1  create_desktop_shortcut.ps1  deploy_and_verify_remote.ps1  deploy_server_remote.ps1  firewall_firewalld.sh  firewall_ufw.sh  gen_cert.sh  health_check.sh  install_server.sh  integration_e2e_remote.ps1  linux_ci_smoke.sh  linux_quick_install.sh  linux_quick_monitor.sh  linux_quick_run.sh  linux_quick_stop.sh  nginx_vpn_proxy.conf  package.sh  proxy_channel_smoke.py  release.sh  rotate_tokens.sh  test.sh  windows_wsl_test.ps1
tests/: test_additional_coverage.py  test_client.py  test_desktop_shortcut_integration.py  test_integration.py  test_server.py
vpn-proxy-go/: .gitignore  go.mod  start_vpn_proxy_go.cmd
vpn-proxy-go/cmd/client/: main.go
vpn-proxy-go/cmd/server/: main.go
vpn-proxy-go/deploy/: vpn-proxy.service
vpn-proxy-go/internal/frame/: frame_test.go  proto.go  udp.go
vpn-proxy-go/internal/httpproxy/: http.go
vpn-proxy-go/internal/pool/: pool.go  pool_test.go
vpn-proxy-go/internal/server/: server.go  server_test.go
vpn-proxy-go/internal/socks/: socks.go  socks_test.go
vpn-proxy-go/internal/tcpline/: tcpline.go  tcpline_test.go
vpn-proxy-rust/: Cargo.toml
vpn-proxy-rust/src/: client.rs  lib.rs  server.rs
(+2 files in other folders)
