[package]
name = "vpn-proxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "vpn_proxy"
path = "src/lib.rs"

[[bin]]
name = "vpn-proxy-server"
path = "src/server.rs"

[[bin]]
name = "vpn-proxy-client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = { version = "0.5", features = ["all"] }
base64 = "0.22"
rand = "0.8"
rustls-native-certs = "0.7"
ipnet = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true